# v4l2_cap_video

./: CMakeLists.txt  config.txt
data/: 2020_3_4_10_46_15_239.avi
src/: main.cpp
src/funs/: funs.cpp  funs.h
src/menu_config/: menu_config.cpp  menu_config.h
src/screen/: screen.cpp  screen.h
src/v4l2/: v4l2.cpp  v4l2.h
